--- a/votantes-ui/src/app/dashboard/votantes/votantes-generales-2025/votantes-generales-2020.component.html
+++ b/votantes-ui/src/app/dashboard/votantes/votantes-generales-2025/votantes-generales-2020.component.html
@@ -1,3 +1,8 @@
+EN CONSTRUCCION
+
+
+@if (false) {
+
 <app-spinner></app-spinner>
 
 @if (formularioVisible) {
@@ -140,7 +145,7 @@
                     <div class="fv-row w-100 flex-md-root">
 
                         <label class="form-label">Fecha de nacimientp</label>
-                        <input type="text" [value]="ciudadano()?.FechaNac | date:'dd/MM/yyyy'" readonly class="form-control mb-2"  />
+                        <input type="text" [value]="ciudadano()?.FechaNac | date:'dd/MM/yyyy':'UTC'"  readonly class="form-control mb-2"  />
 
                     </div>
                     <!--end::Input group-->
@@ -391,45 +396,7 @@
 }
 
 <br><br><br><br><br><br><br><br><br>
-<!-- 
-<div class="d-flex flex-column flex-row-fluid gap-7 gap-lg-10">
 
-        <div class="card card-flush py-4">
 
-            <div class="card-header">
-                <div class="card-title">
-                    <h2>Datos personales</h2>
-                </div>
-            </div>
 
-            <div class="card-body pt-0">
-
-                <div class="d-flex flex-wrap gap-5">
-
-                    <div class="fv-row w-100 flex-md-root">
-                        <label class="required form-label">Cedula de Identidad</label>
-
-                        <input type="number" formControlName="ci" class="form-control mb-2"  />
-                        <control-messages [control]=" form.controls.ci"></control-messages>
-                    </div>
-
-                    <div class="fv-row w-100 flex-md-root">
-                        <label class="form-label">Complemento</label>
-
-                        <input type="text" formControlName="complemento"  class="form-control mb-2"  />
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-
-        <div class="d-flex justify-content-end">
-            <button 
-                (click)="consultar()" 
-                type="button"  class="btn btn-primary">
-                Consultar
-            </button>
-        </div>
-</div> -->
-
+ }
