Redirreccioe bae de datos unificada

--- a/votantes-ui/src/app/auth/login/login.component.html
+++ b/votantes-ui/src/app/auth/login/login.component.html
@@ -20,7 +20,7 @@
                 <!--begin::Title-->
               <img src="assets/img/ted.png" alt="logo" width="45%" height="80%">
 
-              <h1 class="text-dark mb-3">Gestion de usuarios </h1>
+              <h1 class="text-dark mb-3">Sistema De Votantes Y Jurados</h1>
               <!--end::Title-->
 
               <!--begin::Link-->
