--- a/votantes-ui/src/app/layout/sidebar/menu/menu-principal/menu-principal.component.html
+++ b/votantes-ui/src/app/layout/sidebar/menu/menu-principal/menu-principal.component.html
@@ -9,7 +9,7 @@
 <app-menu-simple [menusimple]="menu.judiciales2024"/>
 <app-menu-simple [menusimple]="menu.generales2025"/>
 <app-menu-simple [menusimple]="menu.generales2021segunda"/>
-<!-- <app-menu-simple [menusimple]="menu.opcionSimpleAcercade"/> -->
+<app-menu-simple [menusimple]="menu.busquedaciudadano"/>
 
 
 
